Fix video "jumping" on page during scroll [PUB-50]

--- a/frontend/scss/pages/_p-issuearticle-show.scss
+++ b/frontend/scss/pages/_p-issuearticle-show.scss
@@ -156,6 +156,10 @@
     margin-top: 50px;
     margin-bottom: 50px;
   }
+
+  .m-media--l, .m-media--m {
+    clear: right;
+  }
 }
 
 /***
